--- a/ttyfal/pubspec.yaml
+++ b/ttyfal/pubspec.yaml
@@ -40,6 +40,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/graphics/cover_1.jpg
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
